--- a/style.css
+++ b/style.css
@@ -2,55 +2,60 @@ body,
 html {
   margin: 0;
   padding: 0;
-  height: 100%;
   width: 100%;
-  background: white;
+  height: 100%;
   font-family: "Montserrat", sans-serif;
 }
 
 .container {
   display: flex;
-  background-color: red;
-  width: 100%;
-  height: 100%;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .card-container {
-  background-color: #fff;
-  border-radius: 1rem;
+  margin: 20px;
+  border-radius: 1.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   width: 100%;
+  height: 250px;
+  /* height: 150px; PARA DESTOKP*/
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
     0 6px 20px 0 rgba(0, 0, 0, 0.19);
   -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
     0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  /* position: relative; */
-  /* height: 400px;
-  width: 350px; */
-  margin-top: auto;
-  margin-bottom: auto;
 }
 
 .card-header {
   width: 100%;
-  padding: 2;
+  display: flex;
+  justify-content: center;
+}
+
+.card-header > span {
+  font-size: 25px;
+  padding: 20px;
 }
 
 .card-body {
-  flex-wrap: wrap;
-  flex-flow: center;
-  border: solid 1px blue;
   width: 100%;
 }
 
-.card.footer {
-  border: solid 1px blue;
+.card-message {
   width: 100%;
-  height: 100%;
+  display: flex;
+  justify-content: center;
+  text-align: justify;
+  /* padding: 20px; DESKTOP*/
+}
+
+.card-message > span {
+  margin-right: 20px;
+  margin-left: 20px;
+  line-height: 1.5em;
 }
